--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "jwt-decode": "^4.0.0",
     "ngx-pagination": "^6.0.3",
     "phosphor-icons": "^1.4.2",
     "rxjs": "~7.8.0",
